# crypto-algo-trading-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  chat.md  pyproject.toml
src/: __init__.py  logging_setup.py  main.py
src/adapters/: __init__.py  base.py  ccxt_adapter.py  solana_adapter.py
src/advisory/: __init__.py
src/api/: __init__.py  server.py
src/backtest/: __init__.py
src/config/: __init__.py  settings.py
src/data/: __init__.py
src/execution/: __init__.py
src/notifications/: __init__.py
src/risk/: __init__.py
src/strategies/: __init__.py
tests/: __init__.py  mock_synthetic_dataset.py  test_adapter_edge_cases.py  test_adapters_contract.py  test_api_endpoints.py  test_mock_synthetic_dataset.py  test_settings_validation.py
ui/: index.html
